# notepad

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt
app/: CMakeLists.txt
app/resources/: .gitignore  mainwindow.qrc
app/resources/icons/licenses/: attrs.txt
app/resources/translations/: pt_BR.ts.xml
app/src/: controller.cpp  controller.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  threewaydialog.cpp  threewaydialog.hpp
app/ui/: mainwindow.ui
installers/: jsoncpp.cmake.json  qtbase.cmake.json  qtsvg.cmake.json  qttools.cmake.json  qtwayland.cmake.json
